languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/UnequalOUDim3.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration UnequalOUDim3 {
    learning_method : reinforcement
    rl_algorithm : ddpg-algorithm
    critic : path.to.component
    environment : gym { name:"CartPole-v1" }
    soft_target_update_rate: 0.001
    actor_optimizer : adam{
        learning_rate : 0.0001
        learning_rate_minimum : 0.00005
        learning_rate_decay : 0.9
        learning_rate_policy : step
    }
    critic_optimizer : rmsprop{
        learning_rate : 0.001
        learning_rate_minimum : 0.0001
        learning_rate_decay : 0.5
        learning_rate_policy : step
    }
    strategy : ornstein_uhlenbeck{
        epsilon: 1.0
        min_epsilon: 0.001
        epsilon_decay_method: linear
        epsilon_decay : 0.0001
        epsilon_decay_start: 50
        mu: (-0.9, 0.8, 0.1)
        theta: (0.55, -0.4, 0.5)
        sigma: (0.2, -0.4)
    }
}
